kubernetes/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nanoleafcontroller-deployment
  labels:
    app: nanoleafcontroller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nanoleafcontroller
  template:
    metadata:
      labels:
        app: nanoleafcontroller
    spec:
      containers:
        - name: nanoleafcontroller
          image: ghcr.io/mitchfen/nanoleaf-controller:latest
          resources: 
            limits:
              cpu: 2
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 500Mi
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: nanoleafcontroller-service
spec:
  type: ClusterIP 
  selector:
    app: nanoleafcontroller
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nanoleafcontroller-ingress
  annotations:    
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: nanoleaf-controller.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nanoleafcontroller-service
            port:
              number: 80
